Fixed background on mobile. Euro only is now default comparison.

--- a/src/app/Refrain.Web/Main.css
+++ b/src/app/Refrain.Web/Main.css
@@ -1,17 +1,22 @@
-﻿body {
+﻿html, body {
 	color: #ffffff;
-	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: 22px;
-	margin: 0px;
+	font-family: verdana, arial, helvetica, sans-serif;
+	
+	margin: 0;
+	padding: 0;
 
 	background:url(Images/bgrefrain4.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	
 	-ms-background-size: cover;
 	background-size: cover;
+
+	background-attachment: scroll;
+
+	min-height: 100%;
+	min-width: 100%;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 1024px)
@@ -27,7 +32,7 @@
      }
 
 	 #ShareMatchOnFacebook {
-		margin-top: 0px !important;
+		margin-top: 0 !important;
 	}
 }
 
